methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:17: error: not found: value setColorBrosse
  setColorBrosse()
  ^