methods.picture.PatternPicture.scala.code
override def run() {
  for (compteur <- 1 to 2) {
    for (compteur1 <- 1 to 2) {
      carre()
      avance(4)
    }
    gauche()
    avance(4)
    droite()
  }
  avance(4)
  
}


def motif(c:Color) {
  setColorBrosse()
  gauche()
  avance()
  marqueSol()
  recule()
  droite()
  avance()
  marqueSol()
  avance(2)
  gauche()
}

def marqueSol() {
  baisseBrosse()
  leveBrosse()
}

def carre() {
  motif(Color.RED)
  motif(Color.BLUE)
  motif(Color.GREEN)
  motif(Color.YELLOW)
}
